Fix border gap

--- a/src/App.css
+++ b/src/App.css
@@ -341,14 +341,14 @@ h3,
 
 
 .object-box{
-  border: 0.2vw solid;
+  border: 3px  solid;
 }
 
 .object-box-key{
   color: white;
-  font-size: 1vw !important;
-  margin-top: -2.8vh !important;
-  font-size: medium;
+  /* font-size: 1vw !important;
+  margin-top: -2.8vh !important; */
+  /* font-size: medium; */
 }
 
 .cursor-not-allowed{
